styles/table.css
/* Rounding the borders of the table  */
thead tr:first-child th:first-child {
    border-top-left-radius: 0.3em;
}

thead tr:first-child th:last-child {
    border-top-right-radius: 0.3em;
}

.table-section {
    width: 80%;
    box-shadow: 0 0.1px 0.3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.12);
    border-radius: .3em;
    background-color: #fff;
    margin-top: max(10%, 150px);
    margin-top: max(10%, 150px);
    margin-left: auto;
    margin-right: auto;
    font-family: Arial, Helvetica, sans-serif;
}

tbody {
    border-bottom: 1.5px solid hsl(270, 3%, 86%);
    border-top: 1.5px solid hsl(270, 3%, 86%);
    color: #4b4b4bec;
}

.table-container {
    width: 95%;
    margin: 0 2%;
    overflow-x: auto;
    overflow-y: hidden;
    border-top-left-radius: 0.3em;
    border-top-right-radius: 0.3em;
}

table {
    height: 100%;
    width: 100%;
    border-collapse: collapse;
    border-spacing: 0px;
    border-top-left-radius: 0.3em;
    border-top-right-radius: 0.3em;
    color: #293241ff;
    min-width: 800px;
    margin: 0 auto;
    background: #fff;
}

.table-container::-webkit-scrollbar {
    height: 8px;
}

.table-container::-webkit-scrollbar-track {
    border-radius: 10px;
}

.table-container::-webkit-scrollbar-thumb {
    background: #111;
    border-radius: 10px;
}

th,
td {
    font-weight: normal;
    width: fit-content;
    text-align: left;
    padding: 0.7rem 0.4rem;
}

td {
    border-bottom: 1.5px solid hsl(300, 4%, 95%);
}

th {
    color: #000;
}

thead {
    padding: 0.5em;
    letter-spacing: 1px;
}

.table-info {
    width: 100%;
    color: #000;
}

.table-info-container {
    width: 100%;
    display: flex;
    justify-content: space-between;
    border-bottom-left-radius: 0.3em;
    border-bottom-right-radius: 0.3em;
}

.results-number {
    display: flex;
    margin-left: 3%;
}

.results-number span {
    margin: auto;
    padding: 0 0.7em;
}

.table-page-change {
    display: flex;
    margin-right: 3%;
}

.table-page-change ul {
    list-style: none;
    display: flex;
}

.table-page-change li {
    display: flex;
    align-items: center;
    border-radius: 0.25em;
}

.table-page-change svg {
    height: 1em;
    width: 1em;
    margin: 0.5em;
    border-radius: 1em;
}

.table-page-change li:first-child:hover{
    background-color: rgba(65, 65, 65, 0.178);
}
.table-page-change li:last-child:hover{
    background-color: rgba(65, 65, 65, 0.178);
}
.table-page-change-input {
    display: flex;
}

.table-page-change-input input {
    background: none;
    border-radius: 0.3em;
    border: 2px solid #767676;
    padding: 0.4em;
    width: min-content;
}

.table-page-change-input span {
    margin: auto 0 auto 0.4em;
}

/* The top menu of the table */
.table-top {
    display: inline-block;
    margin-left: 2%;
}

.table-title {
    margin-left: 2%;
    /* color: rgba(70, 70, 70, 0.767); */
    /* color: var(--burnt-sienna); */
    color: #F5AF00;
}

.table-title h1 {
    margin-bottom: 10px;
    font-weight: 500;
}

/* Top buttons */
.table-buttons {
    display: flex;

}

.table-new-project {
    display: flex;
    justify-content: center;
    align-items: center;
    height: fit-content;
    width: fit-content;
}

.table-new-project button {
    background-color: inherit;
    border: none;
    border-radius: 50%;

}

.table-new-project svg:hover {
    background-color: rgba(199, 199, 199, 0.178);
    fill: #111;
    border-radius: 50%;
    cursor: pointer;
}

.table-new-project svg {
    padding: 3px;
    width: 35px;
    height: 35px;
    fill: rgb(110, 110, 110);
    ;
}

/* Search box */
.table-search-box input:invalid:not(:focus) {
    cursor: pointer;
}


.table-search-box {
    display: flex;
    justify-content: right;
    position: relative;
    height: fit-content;
    width: fit-content;
}

.table-search-box button {
    position: absolute;
    border: none;
    height: 40px;
    width: 40px;
    border-radius: 50%;
    background-color: inherit;
    right: 0;
}

.table-search-box input {
    height: 40px;
    width: 40px;
    border: none;
    border-radius: 50em;
    cursor: default;
    transition: width .3s linear;
}

.table-search-box input::placeholder {
    opacity: 0;
}

.table-search-box button:focus {
    outline: none;
}

.table-search-box button:focus~input::placeholder {
    opacity: 1;
}


.table-search-box button:focus~input {
    padding: 0 10px 0 10px;
    outline: 2px solid #4441ff;
    width: 200px;
    border-radius: 50em;
    transition: all .3s ease-out;
    box-shadow: 0 0.9px 1.5px rgba(0, 0, 0, 0.03),
        0 3.1px 5.5px rgba(0, 0, 0, 0.08),
        0 14px 25px rgba(0, 0, 0, 0.12);

}

.table-search-box input:focus {
    outline: 2px solid #4441ff;
}

.table-search-box input:focus,
.table-search-box input:valid {
    padding: 0 10px 0 10px;
    width: 200px;
    box-shadow: 0 0.9px 1.5px rgba(0, 0, 0, 0.03),
        0 3.1px 5.5px rgba(0, 0, 0, 0.08),
        0 14px 25px rgba(0, 0, 0, 0.12);
}



.table-search-box svg {
    width: 40px;
    height: 40px;
    color: rgb(110, 110, 110);
    padding: 3px;
}

.table-search-box svg:hover {
    border-radius: 50%;
    background-color: rgba(199, 199, 199, 0.178);
    color: #000;
    transition: color 0.15s, background-color 0.15s;
    cursor: pointer;
}


/* Action menu */

/* The action context menu */
.action-button {
    padding: 10%;
    display: flex;
    justify-content: center;
    align-items: center;
    border: none;
    background-color: inherit;
    color: inherit;
    margin-left: 20%;
    cursor: pointer;
    border-radius: 50%;
}

.action-button svg {
    width: 16px;
    height: 16px;
}

.action-button:hover {
    background-color: rgba(88, 88, 88, 0.178);
}

.action-box {
    position: relative;
    transition: .5s;
}


.action-button.active+div {
    opacity: 1;
    z-index: 10;
}



/* Action menu */
.action-menu {
    color: #2d2b39;
    background-color: #fff;
    position: absolute;
    top: -25px;
    left: -90px;
    opacity: 0;
    transition: .3s;
    border-radius: 5px;
    box-shadow: 0 0.9px 1.5px rgba(0, 0, 0, 0.09), 0 3.1px 5.5px rgba(0, 0, 0, 0.13), 0 14px 25px rgba(0, 0, 0, 0.12);
}

.action-menu ul {
    list-style-type: none;
    margin-top: 0px;
    margin-bottom: 0px;
    text-transform: capitalize;
    border-radius: inherit;
}

.action-menu svg {
    margin-right: 2px;
    margin-left: 10px;
}

.action-menu ul li:last-child svg {
    width: 16px;
    height: 16px;
}

.action-menu ul li:first-child svg {
    width: 20px;
    height: 20px;
}

.action-menu .option {
    display: flex;
    align-items: center;
    border-radius: inherit;
    height: 38px;
    width: 100px;
}

.action-menu .option:hover {
    background-color: rgba(0, 0, 0, 0.08);
    cursor: pointer;
}

